# docker-registry-cleaner

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: push_main.yml
src/: main.rs
