[package]
name = "docker-registry-cleaner"
version = "0.0.1"
edition = "2021"
description = "Docker Registry Cleaner"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
dkregistry = { git = "https://github.com/camallo/dkregistry-rs.git", version = "0.5.1-alpha.0" }
service_conventions = { version = "0.0.16", features = ["tracing"] }
tracing = "0.1.40"
