[package]
name = "docker-registry-cleaner"
version = "0.2.0"
edition = "2021"
description = "Docker Registry Cleaner"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
docker-registry = { git = "https://github.com/clowdhaus/docker-registry.git", branch = "main", features = ["reqwest-rustls"], default-features= false }
service_conventions = { version = "0.0.23", features = ["tracing"], default-features = false }
tracing = "0.1.40"
clap = { version = "4.5.8", features = ["derive"] }
anyhow = "1.0.93"
futures = "0.3.31"
