[package]
name = "docker-registry-cleaner"
version = "0.2.1"
edition = "2021"
description = "Docker Registry Cleaner"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["rustls-tls", "json"], default-features = false }
serde_json = "1.0"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
service_conventions = { version = "0.0.25", features = ["tracing"], default-features = false }
tracing = "0.1.40"
clap = { version = "4.5.8", features = ["derive"] }
futures = "0.3.31"
anyhow = "1.0.93"
async-stream = "0.3.6"
thiserror = "2.0.3"
